--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
@@ -52,9 +52,7 @@
    "outputs": [],
    "source": [
     "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\"\n",
-    "users = pd.read_csv(url, sep='|')\n",
-    "#user2 = users\n",
-    "#user3 = users"
+    "users = pd.read_csv(url, sep='|')\n"
    ]
   },
   {
