--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/04_Apply/Students_Alcohol_Consumption/Guidelines_Output.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/04_Apply/Students_Alcohol_Consumption/Guidelines_Output.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1133,8 +1133,11 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1148,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
