--- a/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb
+++ b/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb
@@ -228,19 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Options' object has no attribute 'binary'",
+     "ename": "NameError",
+     "evalue": "name 'BeautifulSoup' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=14'>15</a>\u001b[0m options\u001b[39m.\u001b[39madd_argument(\u001b[39m'\u001b[39m\u001b[39m--disable-infobars\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=15'>16</a>\u001b[0m ser \u001b[39m=\u001b[39m Service(\u001b[39m\"\u001b[39m\u001b[39m/usr/local/bin/geckodriver\u001b[39m\u001b[39m\"\u001b[39m) \n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=16'>17</a>\u001b[0m driver \u001b[39m=\u001b[39m webdriver\u001b[39m.\u001b[39;49mFirefox(options\u001b[39m=\u001b[39;49moptions,service\u001b[39m=\u001b[39;49mser)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=17'>18</a>\u001b[0m driver\u001b[39m.\u001b[39mimplicitly_wait(\u001b[39m30\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=18'>19</a>\u001b[0m driver\u001b[39m.\u001b[39mget(url)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py:146\u001b[0m, in \u001b[0;36mWebDriver.__init__\u001b[0;34m(self, firefox_profile, firefox_binary, capabilities, proxy, executable_path, options, service_log_path, service_args, service, desired_capabilities, log_path, keep_alive)\u001b[0m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py?line=143'>144</a>\u001b[0m \u001b[39m# options overrides capabilities\u001b[39;00m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py?line=144'>145</a>\u001b[0m \u001b[39mif\u001b[39;00m options:\n\u001b[0;32m--> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py?line=145'>146</a>\u001b[0m     \u001b[39mif\u001b[39;00m options\u001b[39m.\u001b[39;49mbinary:\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py?line=146'>147</a>\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbinary \u001b[39m=\u001b[39m options\u001b[39m.\u001b[39mbinary\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/selenium/webdriver/firefox/webdriver.py?line=147'>148</a>\u001b[0m     \u001b[39mif\u001b[39;00m options\u001b[39m.\u001b[39mprofile:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Options' object has no attribute 'binary'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=24'>25</a>\u001b[0m contact_phone \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39mfind_elements(by\u001b[39m=\u001b[39mBy\u001b[39m.\u001b[39mXPATH, value\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m//*[@id=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcustomer-card\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m]/div[2]/div[2]/button[2]\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=25'>26</a>\u001b[0m \u001b[39m#contact_phone.click()\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=26'>27</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=27'>28</a>\u001b[0m \u001b[39m## And then we use Beautiful soup\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=28'>29</a>\u001b[0m soup \u001b[39m=\u001b[39m BeautifulSoup(driver\u001b[39m.\u001b[39mpage_source)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=30'>31</a>\u001b[0m \u001b[39m#driver.close()\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/2.python/2.python_advanced/05.Scraping/3.selenium.ipynb#ch0000011?line=32'>33</a>\u001b[0m \u001b[39mfor\u001b[39;00m elem \u001b[39min\u001b[39;00m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, {\u001b[39m'\u001b[39m\u001b[39mclass\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39mbutton button--secondary\u001b[39m\u001b[39m'\u001b[39m}):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BeautifulSoup' is not defined"
      ]
     }
    ],
@@ -260,8 +259,8 @@
     "#driver = webdriver.Firefox()\n",
     "options.add_argument('--start-maximized')\n",
     "options.add_argument('--disable-infobars')\n",
-    "ser = Service(\"/usr/local/bin/geckodriver\") \n",
-    "driver = webdriver.Firefox(options=options,service=ser)\n",
+    "ser = Service(\"/Users/Jorg/Drivers/chromedriver\") \n",
+    "driver = webdriver.Chrome(options=options,service=ser)\n",
     "driver.implicitly_wait(30)\n",
     "driver.get(url)\n",
     "\n",
