--- a/content/4.machine_learning/2.Classification/1.Classification_scikit-learn.ipynb
+++ b/content/4.machine_learning/2.Classification/1.Classification_scikit-learn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "(8124, 23)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +138,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-surface-below-ring</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>y</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e</td>\n",
+       "      <td>b</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>l</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>g</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>e</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8119</th>\n",
+       "      <td>e</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>y</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8120</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>y</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>b</td>\n",
+       "      <td>v</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8121</th>\n",
+       "      <td>e</td>\n",
+       "      <td>f</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8122</th>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>y</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>y</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>b</td>\n",
+       "      <td>...</td>\n",
+       "      <td>k</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>e</td>\n",
+       "      <td>w</td>\n",
+       "      <td>v</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8123</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>y</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>o</td>\n",
+       "      <td>c</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8124 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     class cap-shape cap-surface cap-color bruises odor gill-attachment  \\\n",
+       "0        p         x           s         n       t    p               f   \n",
+       "1        e         x           s         y       t    a               f   \n",
+       "2        e         b           s         w       t    l               f   \n",
+       "3        p         x           y         w       t    p               f   \n",
+       "4        e         x           s         g       f    n               f   \n",
+       "...    ...       ...         ...       ...     ...  ...             ...   \n",
+       "8119     e         k           s         n       f    n               a   \n",
+       "8120     e         x           s         n       f    n               a   \n",
+       "8121     e         f           s         n       f    n               a   \n",
+       "8122     p         k           y         n       f    y               f   \n",
+       "8123     e         x           s         n       f    n               a   \n",
+       "\n",
+       "     gill-spacing gill-size gill-color  ... stalk-surface-below-ring  \\\n",
+       "0               c         n          k  ...                        s   \n",
+       "1               c         b          k  ...                        s   \n",
+       "2               c         b          n  ...                        s   \n",
+       "3               c         n          n  ...                        s   \n",
+       "4               w         b          k  ...                        s   \n",
+       "...           ...       ...        ...  ...                      ...   \n",
+       "8119            c         b          y  ...                        s   \n",
+       "8120            c         b          y  ...                        s   \n",
+       "8121            c         b          n  ...                        s   \n",
+       "8122            c         n          b  ...                        k   \n",
+       "8123            c         b          y  ...                        s   \n",
+       "\n",
+       "     stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
+       "0                         w                      w         p          w   \n",
+       "1                         w                      w         p          w   \n",
+       "2                         w                      w         p          w   \n",
+       "3                         w                      w         p          w   \n",
+       "4                         w                      w         p          w   \n",
+       "...                     ...                    ...       ...        ...   \n",
+       "8119                      o                      o         p          o   \n",
+       "8120                      o                      o         p          n   \n",
+       "8121                      o                      o         p          o   \n",
+       "8122                      w                      w         p          w   \n",
+       "8123                      o                      o         p          o   \n",
+       "\n",
+       "     ring-number ring-type spore-print-color population habitat  \n",
+       "0              o         p                 k          s       u  \n",
+       "1              o         p                 n          n       g  \n",
+       "2              o         p                 n          n       m  \n",
+       "3              o         p                 k          s       u  \n",
+       "4              o         e                 n          a       g  \n",
+       "...          ...       ...               ...        ...     ...  \n",
+       "8119           o         p                 b          c       l  \n",
+       "8120           o         p                 b          v       l  \n",
+       "8121           o         p                 b          c       l  \n",
+       "8122           o         e                 w          v       l  \n",
+       "8123           o         p                 o          c       l  \n",
+       "\n",
+       "[8124 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add your code to analyse the data here:\n",
     "\n",
-    "\n",
+    "mushrooms\n",
     "\n",
     "\n"
    ]
@@ -159,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +787,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +1193,7 @@
        "[8124 rows x 95 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +1224,7 @@
        "Name: class, Length: 8124, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +1296,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1328,7 @@
        "1.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,9 +1358,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:modeleval] *",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
-   "name": "conda-env-modeleval-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -997,7 +1372,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "098abfbdda89cc068fc5a24c70b28519776b65016448753c248b3e3ae6b6b2c3"
+   }
   }
  },
  "nbformat": 4,
